# trustflow-platform-backend

./: Cargo.toml  LIB_DEPENDENCY_ANALYSIS.md  Makefile  README.md  rust-toolchain.toml
.github/workflows/: cd.yml  ci.yml
config/: base.yaml  production.yaml
libs/auth/: Cargo.toml
libs/common/: Cargo.toml
libs/common/src/: lib.rs  value_objects.rs
libs/common/src/extractors/: auth.rs  json.rs  mod.rs  path.rs  query.rs
libs/common/src/http/: axum.rs  error.rs  error_code.rs  fallback.rs  headers.rs  meta.rs  mod.rs  pagination.rs  response.rs
libs/common/src/middleware/: auth_context.rs  body_limit.rs  compression.rs  cors.rs  idempotency.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs  recovery.rs  retry.rs  timeout.rs  tracking.rs
libs/common/src/observability/: mod.rs
libs/common/src/security/: csrf.rs  hashing.rs  mod.rs  secrets.rs
libs/common/src/time/: clock.rs  intervals.rs  mod.rs  utils.rs
libs/common/src/utils/: encoding.rs  json.rs  mod.rs  serde.rs  strings.rs
libs/common/src/validation/: mod.rs  request.rs  rules.rs
libs/common/src/value_objects/: contact.rs  core.rs  identity.rs  mod.rs  network.rs  pagination_vo.rs  security.rs  timestamps.rs  tracking.rs
libs/config/: Cargo.toml
libs/config/src/: lib.rs  loader.rs
libs/config/src/core/: environment.rs  error.rs  mod.rs  settings.rs
libs/config/src/sources/: dotenv.rs  mod.rs  yaml.rs
libs/error/: Cargo.toml
libs/error/src/: lib.rs
libs/error/src/adapters/: argon2.rs  jwt.rs  mod.rs  redis.rs  reqwest.rs  sqlx.rs  validator.rs
libs/error/src/core/: app_error.rs  context.rs  mod.rs
libs/error/src/core/codes/: auth_error.rs
libs/error/src/core/kinds/: auth.rs  business.rs  database.rs  external.rs  infrastructure.rs  internal.rs  mod.rs  not_found.rs  validation.rs
libs/error/src/http/: api_error.rs  error_code.rs  mod.rs
libs/error/src/http/converters/: auth.rs  business.rs  database.rs  external.rs  infrastructure.rs  internal.rs  mod.rs  not_found.rs  validation.rs
libs/infrastructure/: .env  Cargo.toml
libs/infrastructure/src/: lib.rs
libs/infrastructure/src/config/: mod.rs
libs/infrastructure/src/database/: config.rs  health.rs  mod.rs  pool.rs  transaction.rs
libs/infrastructure/src/http_clients/: mod.rs
libs/infrastructure/src/observability/: logging.rs  metrics.rs  mod.rs  tracing.rs
libs/infrastructure/src/redis/: cache.rs  config.rs  error.rs  key.rs  lock.rs  mod.rs  otp.rs  pool.rs  pubsub.rs  rate_limiter.rs  session.rs
libs/infrastructure/src/resilience/: bulkhead.rs  circuit_breaker.rs  mod.rs  retry.rs  timeout.rs
libs/logistics/: Cargo.toml
libs/messaging/: Cargo.toml
libs/payment/: Cargo.toml
libs/telemetry/: Cargo.toml
proto/: Cargo.toml  build.rs
services/analytics/: Cargo.toml
services/analytics/src/: routes.rs
services/catalog/: Cargo.toml
services/catalog/src/: routes.rs
services/dispute/: Cargo.toml
services/dispute/src/: routes.rs
services/dispute/src/api/: routes.rs
services/escrow/: Cargo.toml
services/escrow/src/: routes.rs
services/evidence/: Cargo.toml
services/evidence/src/: routes.rs
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
services/identity/: Cargo.toml
services/identity/migrations/: 20240301000000_initial_schema.sql
services/identity/src/: main.rs  routes.rs
services/identity/src/api/: mod.rs  routes.rs
services/identity/src/api/handlers/: admin_handler.rs  auth_handler.rs  mod.rs  user_handler.rs  verification_handler.rs
services/identity/src/api/middleware/: mod.rs
services/identity/src/application/: config.rs  mod.rs
services/identity/src/application/services/: auth_service.rs  mod.rs  role_service.rs  user_service.rs  verification_service.rs
services/identity/src/config/: mfa.rs  password.rs  rate_limit.rs  verification.rs
services/identity/src/domain/: events.rs  mod.rs
services/identity/src/domain/entities/: mod.rs  role.rs  session.rs  user.rs  verification.rs
services/identity/src/domain/enums/: enums.rs
services/identity/src/domain/value_objects/: value_objects.rs
services/identity/src/infrastructure/: db.rs  mod.rs
services/messaging/: Cargo.toml
services/messaging/src/: routes.rs
services/notification/: Cargo.toml
services/notification/src/: routes.rs
services/order/: Cargo.toml
services/order/src/: app.rs  lib.rs  main.rs  routes.rs
services/order/src/api/: routes.rs
services/order/src/api/handlers/: create_booking.rs  get_booking.rs  mod.rs
services/risk/: Cargo.toml
services/risk/src/: routes.rs
services/shipment/: Cargo.toml
services/shipment/src/: routes.rs
services/trust/: Cargo.toml
services/trust/src/: routes.rs
tests/performance/: endurance_test.rs  load_test.rs  stress_test.rs
