[workspace]
members = [
    # Services
    "services/order",
    "services/escrow",
    "services/identity",
    "services/catalog",
    "services/shipment",
    "services/evidence",
    "services/dispute",
    "services/trust",
    "services/risk",
    "services/gateway",
    "services/notification",
    "services/messaging",
    "services/analytics",
    # Libraries
    "libs/common",
    "libs/config",
    "libs/error",
    "libs/infrastructure",
]
resolver = "3"

[workspace.package]

version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
time = {version="0.3.45",features = ["serde", "parsing", "formatting", "macros"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json","macros","migrate"] }
uuid = { version = "1.2.0", features = ["v4", "serde"] }
tracing = "0.1.44"

