[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true     
serde.workspace = true 
serde_json.workspace =true  
time.workspace=true
axum = { version = "0.8.8", optional = true, features = ["macros"] }  

[features]
default = []
http = ["dep:axum"]
