[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
error = { path = "../error", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
time.workspace = true
axum = { version = "0.8.8", optional = true, features = ["macros",] }
uuid.workspace = true
tracing.workspace = true
fastrand = "2.0.0"
regex = "1.5"
lazy_static = "1.4"
# Async runtime
tokio = { version = "1", optional = true, features = ["sync", "time"] }
futures = { version = "0.3", optional = true }
# Hashing and security
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"

[features]
default = []
http = ["dep:axum", "dep:tokio", "dep:futures"]
