[package]
name = "error"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

http = { version = "1",optional = true }

axum = { version = "0.8", optional = true, features = ["macros"] }
# Database
sqlx = { workspace = true, optional = true }

# Redis
redis = { version = "1", optional = true }

# Auth
jsonwebtoken = { version = "10.3", optional = true }
argon2 = { version = "0.5", optional = true }

# HTTP
reqwest = { version = "0.13", optional = true, features = ["json"] }

# Validation
validator = { version = "0.20", optional = true, features = ["derive"] }

# Base64 encoding
base64 = "0.22"

[features]
default = []
http = ["dep:axum", "dep:http"]
redis=["dep:redis"]
jwt=["dep:jsonwebtoken"]
validator=["dep:validator"]
argon2=["dep:argon2"]
reqwest=["dep:reqwest"]
sqlx=["dep:sqlx"]
all = ["http", "dep:sqlx", "dep:redis", "dep:jsonwebtoken", "dep:argon2", "dep:reqwest", "dep:validator"]

