[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
description = "Shared infrastructure layer for the modular monolith"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "migrate", "uuid", "time", "json"] }

# Internal libraries
error = { path = "../error" }
config = { path = "../config" }

# Redis
redis = { version = "0.26", features = ["aio", "tokio-comp", "connection-manager"] }

# Misc
url = "2.5"

[features]
default = ["database", "redis"]
database = []
redis = []
