[package]
name = "identity"
version.workspace = true
edition.workspace = true


[dependencies]
common = { path = "../../libs/common" }
config = { path = "../../libs/config" }
tokio.workspace = true     
serde.workspace = true  
axum = { version = "0.8.8", optional=true , features = ["macros"] }
tracing.workspace=true
tracing-subscriber = "0.3.22"

