[package]
name = "order"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../../libs/common" ,features = ["http"] }
config = { path = "../../libs/config" }
tokio.workspace = true     
serde.workspace = true 
serde_json.workspace=true   
axum = { version = "0.8.8", features = ["macros"] }